[gd_scene load_steps=6 format=2]

[ext_resource path="res://UI/Assets/GUI/MediumPressedButton.tres" type="Texture" id=1]
[ext_resource path="res://UI/Assets/GUI/MediumNormalButton.tres" type="Texture" id=2]
[ext_resource path="res://GUI.gd" type="Script" id=3]
[ext_resource path="res://UI/Font/PixelFont.tres" type="DynamicFont" id=4]

[sub_resource type="StyleBoxFlat" id=158]
bg_color = Color( 0.843137, 0.843137, 0.843137, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.137255, 0.137255, 0.137255, 1 )

[node name="GUI" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="GameMenu" type="Control" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -75.0
margin_top = -125.0
margin_right = 75.0
margin_bottom = 125.0

[node name="Panel" type="Panel" parent="GameMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 158 )

[node name="VBoxContainer" type="VBoxContainer" parent="GameMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
custom_constants/separation = 6

[node name="Label" type="Label" parent="GameMenu/VBoxContainer"]
margin_right = 130.0
margin_bottom = 17.0
custom_fonts/font = ExtResource( 4 )
text = "Game Menu"
align = 1

[node name="MarginContainer" type="MarginContainer" parent="GameMenu/VBoxContainer"]
margin_top = 23.0
margin_right = 130.0
margin_bottom = 33.0
rect_min_size = Vector2( 0, 10 )

[node name="Continue" type="TextureButton" parent="GameMenu/VBoxContainer"]
margin_left = 25.0
margin_top = 39.0
margin_right = 105.0
margin_bottom = 64.0
rect_min_size = Vector2( 80, 25 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 1 )
expand = true

[node name="Label" type="Label" parent="GameMenu/VBoxContainer/Continue"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 4 )
text = "Continue"
align = 1
valign = 1

[node name="NewGame" type="TextureButton" parent="GameMenu/VBoxContainer"]
margin_left = 25.0
margin_top = 70.0
margin_right = 105.0
margin_bottom = 95.0
rect_min_size = Vector2( 80, 25 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 1 )
expand = true

[node name="Label" type="Label" parent="GameMenu/VBoxContainer/NewGame"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 4 )
text = "New Game"
align = 1
valign = 1

[node name="Save" type="TextureButton" parent="GameMenu/VBoxContainer"]
margin_left = 25.0
margin_top = 101.0
margin_right = 105.0
margin_bottom = 126.0
rect_min_size = Vector2( 80, 25 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 1 )
expand = true

[node name="Label" type="Label" parent="GameMenu/VBoxContainer/Save"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 4 )
text = "Save"
align = 1
valign = 1

[node name="Load" type="TextureButton" parent="GameMenu/VBoxContainer"]
margin_left = 25.0
margin_top = 132.0
margin_right = 105.0
margin_bottom = 157.0
rect_min_size = Vector2( 80, 25 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 1 )
expand = true

[node name="Label" type="Label" parent="GameMenu/VBoxContainer/Load"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 4 )
text = "Load"
align = 1
valign = 1

[node name="Options" type="TextureButton" parent="GameMenu/VBoxContainer"]
margin_left = 25.0
margin_top = 163.0
margin_right = 105.0
margin_bottom = 188.0
rect_min_size = Vector2( 80, 25 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 1 )
expand = true

[node name="Label" type="Label" parent="GameMenu/VBoxContainer/Options"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 4 )
text = "Options"
align = 1
valign = 1

[node name="ExitToDesktop" type="TextureButton" parent="GameMenu/VBoxContainer"]
margin_left = 25.0
margin_top = 194.0
margin_right = 105.0
margin_bottom = 219.0
rect_min_size = Vector2( 80, 25 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 1 )
expand = true

[node name="Label" type="Label" parent="GameMenu/VBoxContainer/ExitToDesktop"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 4 )
text = "Desktop"
align = 1
valign = 1

[connection signal="pressed" from="GameMenu/VBoxContainer/Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="GameMenu/VBoxContainer/NewGame" to="." method="_on_NewGame_pressed"]
[connection signal="pressed" from="GameMenu/VBoxContainer/Save" to="." method="_on_Save_pressed"]
[connection signal="pressed" from="GameMenu/VBoxContainer/Load" to="." method="_on_Load_pressed"]
[connection signal="pressed" from="GameMenu/VBoxContainer/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="GameMenu/VBoxContainer/ExitToDesktop" to="." method="_on_ExitToDesktop_pressed"]
